ros2_ws/log/build_2025-02-18_18-06-43/signal_processing/stderr.log
  File "/shared-folder/ManchesterChallenges/ros2_ws/install/signal_processing/lib/python3.10/site-packages/signal_processing/signal_generator.py", line 56
    self.get_logger().info(f'Time': {self.t:.2f}, Signal: {signal_msg.data:.2f})
                                             ^
SyntaxError: invalid decimal literal

